# coro_util

./: .gitignore  ADAPTER_PORTING_GUIDE.md  CMakeLists.txt  README.md  coverage.sh
.github/workflows/: arm64-macos-clang-asan.yml  arm64-macos-clang-tsan.yml  arm64-macos-clang-ubsan.yml  arm64-macos-clang.yml  coverage.yml  x64-linux-clang-asan.yml  x64-linux-clang-tsan.yml  x64-linux-clang-ubsan.yml  x64-linux-clang.yml  x64-linux-gcc.yml  x64-windows-clang-cl.yml  x86-linux-clang.yml  x86-linux-gcc.yml
include/coro_util/: channel.hpp  qu_mpsc_bounded.hpp  qu_mpsc_unbounded.hpp  qu_spsc_bounded.hpp  qu_spsc_unbounded.hpp  shared.hpp
include/coro_util/adapter/asio/: boost_op.hpp  channel.hpp  op.hpp  qu_mpsc_bounded.hpp  qu_mpsc_unbounded.hpp  qu_spsc_bounded.hpp  qu_spsc_unbounded.hpp
include/coro_util/adapter/capy/: channel.hpp  op.hpp  qu_mpsc_bounded.hpp  qu_mpsc_unbounded.hpp  qu_spsc_bounded.hpp  qu_spsc_unbounded.hpp
include/coro_util/adapter/cobalt/: channel.hpp  qu_mpsc_bounded.hpp  qu_mpsc_unbounded.hpp  qu_spsc_bounded.hpp  qu_spsc_unbounded.hpp
include/coro_util/adapter/concurrencpp/: channel.hpp  qu_mpsc_bounded.hpp  qu_mpsc_unbounded.hpp  qu_spsc_bounded.hpp  qu_spsc_unbounded.hpp
include/coro_util/adapter/cppcoro/: channel.hpp  qu_mpsc_bounded.hpp  qu_mpsc_unbounded.hpp  qu_spsc_bounded.hpp  (+1 more)
include/coro_util/asio/: boost_op.hpp  channel.hpp  op.hpp  qu_mpsc_bounded.hpp  qu_mpsc_unbounded.hpp  qu_spsc_bounded.hpp  qu_spsc_unbounded.hpp
include/coro_util/capy/: channel.hpp  qu_mpsc_bounded.hpp  qu_mpsc_unbounded.hpp  qu_spsc_bounded.hpp  qu_spsc_unbounded.hpp
include/coro_util/cobalt/: channel.hpp  policy.hpp  qu_mpsc_bounded.hpp  qu_mpsc_unbounded.hpp  qu_spsc_bounded.hpp  qu_spsc_unbounded.hpp
include/coro_util/concurrencpp/: channel.hpp  qu_mpsc_bounded.hpp  qu_mpsc_unbounded.hpp  qu_spsc_bounded.hpp  qu_spsc_unbounded.hpp
include/coro_util/cppcoro/: channel.hpp  qu_mpsc_bounded.hpp  qu_mpsc_unbounded.hpp  qu_spsc_bounded.hpp  qu_spsc_unbounded.hpp
include/coro_util/inline/: policy.hpp
include/coro_util/libcoro/: channel.hpp  qu_mpsc_bounded.hpp  qu_mpsc_unbounded.hpp  qu_spsc_bounded.hpp  qu_spsc_unbounded.hpp
include/coro_util/libfork/: channel.hpp  op.hpp  qu_mpsc_bounded.hpp  qu_mpsc_unbounded.hpp  qu_spsc_bounded.hpp  qu_spsc_unbounded.hpp
include/coro_util/tmc/: channel.hpp  policy.hpp  qu_mpsc_bounded.hpp  qu_mpsc_unbounded.hpp  qu_spsc_bounded.hpp  qu_spsc_unbounded.hpp
include/coro_util/yaclib/: channel.hpp  policy.hpp  qu_mpsc_bounded.hpp  qu_mpsc_unbounded.hpp  qu_spsc_bounded.hpp  qu_spsc_unbounded.hpp
tests/: CMakeLists.txt  test_channel.cpp  test_channel_standalone.cpp  test_qu_mpsc_bounded.cpp  test_qu_mpsc_bounded_standalone.cpp  test_qu_mpsc_unbounded.cpp  test_qu_mpsc_unbounded_standalone.cpp  test_qu_spsc_bounded.cpp  test_qu_spsc_bounded_standalone.cpp  test_qu_spsc_unbounded.cpp  test_qu_spsc_unbounded_standalone.cpp
(+23 files in other folders)
